# cat_arch

./: CMakeLists.txt  package.xml  setup.py
config/: analyzers.yaml  arduino.yaml  emlid_gps.yaml  evologics_services.yaml  evologics_usbl.yaml  follower.yaml  gps_to_heading.yaml  m4atx.yaml  mission.yaml  record_topics.sh  robot_dynamics.yaml  robot_localization.yaml  robot_localization_gps_yaw.yaml  robot_localization_no_imu.yaml  robot_localization_operation.yaml  robot_localization_with_imu.yaml  sim_sensors.yaml  topics.txt  waypoints.yaml  xiroi_frames.yaml
config/data_loader/: papallones1.xml
config/master_sync/: sync_all_topics.yaml  sync_groundstation.yaml  sync_groundstation_topics.yaml  sync_grundstation_topics.yaml  sync_turbot.yaml  sync_turbot_topics.yaml  sync_xiroi.yaml  sync_xiroi_topics.yaml
config/places/: andratx.yaml  cabrera.yaml  cala_blava.yaml  cirs.yaml  default_place.yaml  emissari.yaml  palamos.yaml  papallones.yaml  rcd_mallorca.yaml  safareig_campus.yaml  safareig_campus_usbl.yaml  sant_feliu.yaml  soller_base_naval.yaml  valldemossa.yaml  valldemossa_port.yaml
launch/: groundstation.launch  imu.launch  mission.launch  operation.launch  robot.launch  rtabmap_stereo_mapping.launch  safety.launch  simulation.launch  stereo.launch  teleoperation.launch  test.launch  test_imu.launch  viso2.launch
launch/modules/: .fuse_hidden000009bd00000025  control.launch  (+14 more)
msg/: BatteryInfo.msg  Current.msg  Setpoints.msg  TotalTime.msg
rviz/: xiroi.rviz
src/: gps_to_heading.py  image_throttle.py
srv/: MissionTimeout.srv  RecoveryAction.srv
(+44 files in other folders)
